--- a/demo/index.html
+++ b/demo/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <body>
-    <accordion one-open="true">
+    <accordion id="1" one-open="true">
       <accordion-item header="Title 1" init-open="true">content 1</accordion-item>
       <accordion-item header="Title 2">content 2</accordion-item>
       <accordion-item header="Title 3">content 3</accordion-item>
